--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -7,7 +7,7 @@ server:
   port: 8001
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml 
-  type-aliases-package: com.mengxuegu.springcloud.entities
+  type-aliases-package: com.ming.springcloud.entities
   mapper-locations: classpath:mybatis/mapper/**/*.xml
 spring:
   profiles: dev # 开发环境
@@ -16,9 +16,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/springcloud_db01?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db01***************
+    url: jdbc:mysql://192.168.1.103:3306/springcloud_db01?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db01***************
     username: root
-    password: root
+    password: 123456
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -39,7 +39,7 @@ server:
   port: 8001
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml 
-  type-aliases-package: com.mengxuegu.springcloud.entities
+  type-aliases-package: com.ming.springcloud.entities
   mapper-locations: classpath:mybatis/mapper/**/*.xml
 spring:
   profiles: prod # 生产环境
@@ -48,9 +48,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/springcloud_db02?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db02***************
+    url: jdbc:mysql://192.168.1.103:3306/springcloud_db02?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db02***************
     username: root
-    password: root
+    password: 123456
     dbcp2:
       min-idle: 5
       initial-size: 5
